--- a/team.html
+++ b/team.html
@@ -11,14 +11,164 @@
     <header>
         <h1><a href="/">Destiny</a></h1>
         <nav>
-            <a href="#">Hosgeldin</a>
-            <a href="#">Tanitim</a>
-            <a href="#">Adimlar</a>
+            <a href="#count-sec">Sayac</a>
+            <a href="#images-sec">Resimler</a>
+            <a href="#donate-sec">Bagis</a>
+            <a href="/" class="spec-link">Ana Sayfa</a>
             <a href="#" class="spec-link">Projeler</a>
-            <a href="#" class="spec-link">Takim</a>
         </nav>
         <button class="nav-btn">|||</button>
     </header>
+
+    <!-- Ana icerik -->
+    <main>
+        <section id="count-sec">
+            <div class="count-sec-left">
+                <h1>Bu ayin en iyisi</h1>
+                <div class="counter">
+                    <h4>Aciklanmasina kalan sure</h4>
+                    <div class="boxes">
+                        <div class="box">
+                            <p>00</p>
+                            <p>Saniye</p>
+                        </div>
+                        <div class="box">
+                            <p>00</p>
+                            <p>Dakika</p>
+                        </div>
+                        <div class="box">
+                            <p>00</p>
+                            <p>Saat</p>
+                        </div>
+                        <div class="box">
+                            <p>00</p>
+                            <p>Gun</p>
+                        </div>
+
+                    </div>
+                </div>
+                <div class="buttons">
+                    <button>Tahmin Et</button>
+                    <button>Sonuclari Goster</button>
+                </div>
+            </div>
+            <div class="count-sec-right">
+                <img src="https://picsum.photos/300" alt="">
+            </div>
+        </section>
+        
+    </main>
+
+    <!-- ---Fotograflar Alani ----->
+    <section id="images-sec">
+        <div class="img-wrapper">
+            <img src="https://picsum.photos/500" alt="">
+            <h1>Surdurulebilir</h1>
+        </div>
+        <div class="img-wrapper">
+            <img src="https://picsum.photos/501" alt="">
+            <h1>Kolay Bakim</h1>
+        </div>
+        <div class="img-wrapper">
+            <img src="https://picsum.photos/502" alt="">
+            <h1>Goz alici</h1>
+        </div>
+    </section>
+
+    <!-- Bagis alani -->
+    <section id="donate-sec">
+        <div class="donate-sec-info">
+            <h1>En Cok Bagis</h1>
+            <button>Hepsini Goster</button>
+        </div>
+        <div class="donate-sec-content">
+            <div class="donate-sec-people">
+                <img src="https://picsum.photos/107" alt="">
+                <div>
+                    <b>Furkan Evin</b>
+                    <p>$40.000.000</p>
+                </div>
+            </div>
+            <div class="donate-sec-people">
+                <img src="https://picsum.photos/108" alt="">
+                <div>
+                    <b>Elif Yalcin</b>
+                    <p>$7.250.000</p>
+                </div>
+            </div>
+            <div class="donate-sec-people">
+                <img src="https://picsum.photos/109" alt="">
+                <div>
+                    <b>Furkan Evin</b>
+                    <p>$32.000.000</p>
+                </div>
+            </div>
+            <div class="donate-sec-people">
+                <img src="https://picsum.photos/100" alt="">
+                <div>
+                    <b>Aylin Ozturk</b>
+                    <p>$25.000.000</p>
+                </div>
+            </div>
+            <div class="donate-sec-people">
+                <img src="https://picsum.photos/101" alt="">
+                <div>
+                    <b>Furkan Evin</b>
+                    <p>$15.800.000</p>
+                </div>
+            </div>
+            <div class="donate-sec-people">
+                <img src="https://picsum.photos/102" alt="">
+                <div>
+                    <b>Furkan Evin</b>
+                    <p>$5.600.000</p>
+                </div>
+            </div>
+            <div class="donate-sec-people">
+                <img src="https://picsum.photos/103" alt="">
+                <div>
+                    <b>Duygu Simsek</b>
+                    <p>$80.250.000</p>
+                </div>
+            </div>
+            <div class="donate-sec-people">
+                <img src="https://picsum.photos/104" alt="">
+                <div>
+                    <b>Dijle Turk</b>
+                    <p>$102.750.000</p>
+                </div>
+            </div>
+            <div class="donate-sec-people">
+                <img src="https://picsum.photos/105" alt="">
+                <div>
+                    <b>Kena Yasin</b>
+                <p>$23.000.000</p>
+                </div>
+            </div>
+            <div class="donate-sec-people">
+                <img src="https://picsum.photos/106" alt="">
+                <div>
+                    <b>Rifki Baba</b>
+                    <p>$40.000.000</p>
+                </div>
+            </div>
+            
+        </div>
+
+    </section>
+
+
+
+
+
+
+
+
+
+
+
+
+
     <!-- Footer -->
     <footer>
         <div class="links">
