--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
     <header>
         <h1><a href="/">Destiny</a></h1>
         <nav>
-            <a href="#">Hosgeldin</a>
-            <a href="#">Tanitim</a>
-            <a href="#">Adimlar</a>
-            <a href="#" class="spec-link">Projeler</a>
-            <a href="#" class="spec-link">Takim</a>
+            <a href="#hero">Hosgeldin</a>
+            <a href="#window-sec">Tanitim</a>
+            <a href="#cards-section">Ilkeler</a>
+            <a href="#list-sec">Adimlar</a>
+            <a href="./projects.html" class="spec-link">Projeler</a>
+            <a href="./team.html" class="spec-link">Takim</a>
         </nav>
         <button class="nav-btn">|||</button>
     </header>
@@ -23,7 +24,7 @@
     <!-- ---Hero section---------------------- -->
     <div id="hero">
         <div id="hero-inner">
-            <h1>Hello World!</h1>
+            <h1>Welcome to my World !!!</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam impedit error hic, dolores repellendus aut nesciunt laboriosam cumque odit assumenda repudiandae soluta omnis, id unde delectus placeat, quibusdam veritatis. Debitis laborum doloribus corrupti enim temporibus vero voluptates soluta. Quia ad asperiores incidunt expl quidem!</p>
             <div class="buttons">
                 <button>Yes?</button>
@@ -70,6 +71,51 @@
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius facere, debitis eum aspernatur cumque quod aperiam. Fuga aperiam enim, deleniti omnis quas voluptatem facilis explicabo fugit suscipit accusantium, quasi necessitatibus?</p>
                 </div>
             </div>
+        </section>
+
+        <!-- --- Liste alani----- -->
+        <section id="list-sec">
+            <div class="info">
+                <h2>Baglanti kuran , surduren ve ilham veren yerler yaratiyoruz</h2>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Delectus eveniet harum non dolorem quae ea maxime, provident molestiae dolore nemo cum unde. Ducimus maiores atque, mollitia minus in numquam fuga.</p>
+            </div>
+            <ul>
+                <li>
+                    <h1>
+                        <span>01</span><br>
+                        Interaktif Dizayn
+                    </h1>
+                    <img src="./images/bookmark.png" alt="">
+                </li>
+                <li>
+                    <h1>
+                        <span>02</span><br>
+                        Web & Mobile Gelistirme
+                    </h1>
+                    <img src="./images/contacts.png" alt="">
+                </li>
+                <li>
+                    <h1>
+                        <span>03</span><br>
+                        Dijital Pazarlama
+                    </h1>
+                    <img src="./images/cards.png" alt="">
+                </li>
+                <li>
+                    <h1>
+                        <span>04</span><br>
+                        Marka & Stratejiler
+                    </h1>
+                    <img src="./images/Chat.png" alt="">
+                </li>
+                <li>
+                    <h1>
+                        <span>01</span><br>
+                        Interaktif Dizayn
+                    </h1>
+                    <img src="./images/bookmark.png" alt="">
+                </li>
+            </ul>
         </section>
 
 
